# qt-qml-chat

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/ChatBackEnd/: CMakeLists.txt
Source/ChatBackEnd/Include/: Client.ixx  Server.ixx  Service.ixx  Session.ixx  SocketInterface.ixx
Source/ChatBackEnd/Source/: ChatBackEndModule.hpp  Client.cxx  Server.cxx  Service.cxx  Session.cxx  SocketInterface.cxx
Source/UserInterface/: CMakeLists.txt  MainWindow.qml
Source/UserInterface/Components/: ApplicationShell.qml
Source/UserInterface/Include/UserInterface/: ChatBoard.hpp  ChatMessage.hpp  LoginSetup.hpp  ServiceProvider.hpp  Singleton.hpp
Source/UserInterface/Pages/: ChatPage.qml  HomePage.qml  LoginPage.qml  ServicePage.qml
Source/UserInterface/Source/: ChatBoard.cpp  ChatMessage.cpp  LoginSetup.cpp  ServiceProvider.cpp  Singleton.cpp
