# Copyright Notices: [...]

# ----------- Global Definitions -----------
SET(LIBRARY_NAME ChatBackEnd)

# ------------- Library Setup --------------
SET(PRIVATE_MODULES_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Source)
SET(PUBLIC_MODULES_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Include)

SET(PRIVATE_MODULES
        ${PRIVATE_MODULES_BASE_DIRECTORY}/Client.cxx
        ${PRIVATE_MODULES_BASE_DIRECTORY}/Server.cxx
        ${PRIVATE_MODULES_BASE_DIRECTORY}/Service.cxx
        ${PRIVATE_MODULES_BASE_DIRECTORY}/Session.cxx
        ${PRIVATE_MODULES_BASE_DIRECTORY}/SocketInterface.cxx
)

SET(PUBLIC_MODULES
        ${PUBLIC_MODULES_BASE_DIRECTORY}/Client.ixx
        ${PUBLIC_MODULES_BASE_DIRECTORY}/Server.ixx
        ${PUBLIC_MODULES_BASE_DIRECTORY}/Service.ixx
        ${PUBLIC_MODULES_BASE_DIRECTORY}/Session.ixx
        ${PUBLIC_MODULES_BASE_DIRECTORY}/SocketInterface.ixx
)

ADD_LIBRARY(${LIBRARY_NAME} ${PRIVATE_MODULES})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)

TARGET_SOURCES(${LIBRARY_NAME}
        PUBLIC
        FILE_SET cxx_public_modules
        TYPE CXX_MODULES
        BASE_DIRS ${PUBLIC_MODULES_BASE_DIRECTORY}
        FILES ${PUBLIC_MODULES}
)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE ${PRIVATE_MODULES_BASE_DIRECTORY})
TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PRIVATE BUILD_DLL)

FIND_PACKAGE(Boost REQUIRED COMPONENTS headers system log)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC
        Boost::headers
        Boost::system
        Boost::log
)